# Genome-Assembly-and-Annotation-Nomenclature_WG

./: .dockerignore  Dockerfile  README.md  pyproject.toml  test_gaan.py
lib/gaan/: gaan.py
src/gaan/: __init__.py  gaan.py
